# chihoang811

./: Book_ratings_1.ipynb  Copy_of_Book_ratings_no_similarity_checked.ipynb
Customer_segmentation/: cx.segmentation.ipynb
Data Visualization Narratives lab/: Original data.xlsx  README.md  Sorted data.xlsx  pyproject.toml
MLE_homework/: MLE_homework.ipynb  pyproject.toml
MML_Operater_Learning/: README.md  pyproject.toml
MML_Operater_Learning/Previous hackers/: FNO_Net_Test.ipynb  Hacker_DeepONetComplexPart2.ipynb  Hacker_DeepONetSimplePart1.ipynb  Operator_Learning_example.ipynb  PCA-net hacker.ipynb  PCA_Net_Test.ipynb
MML_Operater_Learning/mml_Operator/: cost_accuracy_tradeoff_plot.ipynb  data_generation.py  evaluate_flops.py  train_deep_onet.py  train_para_net.py  train_pca_net.py
Marketing_lab/: customer_segmentation.ipynb
Mushroom_project/: Decision_tree.ipynb  Tree.py
New_project/: pyproject.toml
Nutrition/: FOOD_GROUP_Analysis.html
PageRank_based_Link_analysis_on_Books/: Book_rating_Similarity_checked.ipynb  Book_rating_no_Similarity_checked.ipynb  Book_ratings_1.ipynb  Book_ratings_2.ipynb  README  README.md
Python project/: App.py  Notebook.ipynb  README.md
Reinforcement Learning Project/: README.md  pyproject.toml
Reinforcement Learning Project/Agents/: tabular.py
Reinforcement Learning Project/Code/: Env.py
Reinforcement Learning Project/Gymbase/: env.py
Rent Price in Italy/: Data_Cleaning.html  Preprocessing_Unsupervised_Supervised.html
