[project]
name = "new-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Linh Chi Hoang",email = "146458540+chihoang811@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "new_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
