[tool.poetry]
name = "reinforcement learning project"
version = "0.1.0"
description = ""
authors = ["chihoang811 <linh.hoang@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^1.1.1"
pettingzoo = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
